--- a/Predict.ipynb
+++ b/Predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'./models/model_onehot_x1data_L1_epoch200.pth'"
+       "'./models/model_onehot_x1data_MSE_epoch200.pth'"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,26 +162,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_onehot_L1 = torch.load(model_files[0])"
+    "model_LSTM = torch.load(model_files[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RecurrentAutoencoder(\n",
+      "  (encoder): Encoder(\n",
+      "    (rnn1): LSTM(265, 256, batch_first=True)\n",
+      "    (rnn2): LSTM(256, 128, batch_first=True)\n",
+      "  )\n",
+      "  (decoder): Decoder(\n",
+      "    (rnn1): LSTM(128, 128, batch_first=True)\n",
+      "    (rnn2): LSTM(128, 256, batch_first=True)\n",
+      "    (output_layer): Linear(in_features=256, out_features=265, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
+    "print(model_LSTM)\n",
     "alpha = list(string.ascii_uppercase)\n",
     "chr2index = {alpha[i]:i for i in range(len(alpha))}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,24 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./datasets/fsm/0graph1.txt',\n",
-       " './datasets/fsm/0graph0.txt',\n",
-       " './datasets/fsm/0graph2.txt']"
-      ]
-     },
-     "execution_count": 252,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dir = './datasets/fsm/0graph*'\n",
+    "dir = './datasets/fsm/seq/0graph*.txt'\n",
     "# file read\n",
     "all_names = []\n",
     "all_data = []\n",
@@ -219,13 +225,12 @@
     "alpha = list(string.ascii_uppercase)\n",
     "data_length = len(glob.glob(dir))\n",
     "\n",
-    "files = glob.glob(dir)\n",
-    "files"
+    "files = glob.glob(dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,30 +257,27 @@
     "for ind, data in enumerate(all_data):\n",
     "    if len(data) != max_sequence_length:\n",
     "        for i in range(len(data), max_sequence_length):\n",
-    "            all_data[ind].append(zeros)\n",
-    "       \n",
-    "\n",
-    "all_data = np.array([np.array(arr) for arr in all_data])\n",
-    "                       "
+    "            all_data[ind].append(zeros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "382"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "all_data = np.array([np.array(arr) for arr in all_data])\n",
     "all_d = []\n",
     "for ind, data in enumerate(all_data):\n",
     "    all_d.append(data.flatten())\n",
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([3, 1, 265])\n"
+      "torch.Size([382, 1, 265])\n"
      ]
     }
    ],
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -335,37 +337,37 @@
        "          0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000, 30.9065,  0.0000,  1.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000, 10.5201,  0.0000,  1.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000, 10.9700,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  2.0965,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  4.5716,  0.0000,\n",
+       "          0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000,  7.4006,  0.0000,  0.0000,  1.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000]])"
+       "          2.5041]])"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -407,19 +409,23 @@
      "output_type": "stream",
      "text": [
       "torch.Size([265, 265])\n",
-      "tensor(0.0753, device='cuda:0')\n",
-      "[ 9.0990865e-01  1.3487136e-02  5.1256940e-03 ... -7.9503423e-04\n",
-      " -2.3353663e-03  2.4692950e+00]\n"
+      "tensor(0.0180, device='cuda:0')\n",
+      "[ 5.2082576e-02 -4.7331393e-02  1.4518905e-02 ...  3.3811826e-02\n",
+      " -4.0389672e-03  4.6819334e+00]\n",
+      "[array([ 5.2082576e-02, -4.7331393e-02,  1.4518905e-02, ...,\n",
+      "        3.3811826e-02, -4.0389672e-03,  4.6819334e+00], dtype=float32)]\n"
      ]
     }
    ],
    "source": [
-    "prT, _ = predict(model_onehot_L1, T)"
+    "prT, _ = predict(model_onehot_L1, T)\n",
+    "\n",
+    "print(prT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -427,19 +433,22 @@
      "output_type": "stream",
      "text": [
       "torch.Size([265, 265])\n",
-      "tensor(0.6906, device='cuda:0')\n",
-      "[ 0.70929873  0.12725899  0.02833471 ... -0.01676553 -0.03422892\n",
-      "  7.3599625 ]\n"
+      "tensor(0.0199, device='cuda:0')\n",
+      "[ 0.50145906  0.46425033 -0.00424828 ...  0.02180772 -0.0035957\n",
+      "  2.4830134 ]\n",
+      "[array([ 0.50145906,  0.46425033, -0.00424828, ...,  0.02180772,\n",
+      "       -0.0035957 ,  2.4830134 ], dtype=float32)]\n"
      ]
     }
    ],
    "source": [
-    "prF, _ = predict(model_onehot_L1, F)"
+    "prF, _ = predict(model_onehot_L1, F)\n",
+    "print(prF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -447,19 +456,19 @@
      "output_type": "stream",
      "text": [
       "torch.Size([265, 265])\n",
-      "tensor(0.1356, device='cuda:0')\n",
-      "[ 9.3335974e-01  1.0611330e-01 -1.5971115e-01 ... -1.8545599e-03\n",
-      " -1.6880536e-02  4.2876825e+00]\n"
+      "tensor(0.0196, device='cuda:0')\n",
+      "[ 0.502443    0.4656234  -0.00696728 ...  0.02163182 -0.00367077\n",
+      "  2.482694  ]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 9.3335974e-01,  1.0611330e-01, -1.5971115e-01, ...,\n",
-       "        -1.8545599e-03, -1.6880536e-02,  4.2876825e+00], dtype=float32)]"
+       "[array([ 0.502443  ,  0.4656234 , -0.00696728, ...,  0.02163182,\n",
+       "        -0.00367077,  2.482694  ], dtype=float32)]"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,16 +480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3117.7268]], dtype=float32)"
+       "array([[169.08931]], dtype=float32)"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,16 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[208.76878]], dtype=float32)"
+       "array([[169.93518]], dtype=float32)"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,16 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2959.233]], dtype=float32)"
+       "array([[1.5390404]], dtype=float32)"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,16 +540,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.8656398]], dtype=float32)"
+       "array([[0.74176836]], dtype=float32)"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,16 +560,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.94269073]], dtype=float32)"
+       "array([[0.7395986]], dtype=float32)"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,16 +580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.8808979]], dtype=float32)"
+       "array([[0.99998033]], dtype=float32)"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,13 +597,6 @@
    "source": [
     "cosine_similarity(prF, prM)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -613,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
